# rp2040-i2c-interface

./: .gitignore  CMakeLists.txt  Makefile  README.md  kernel_i2c_flags.h  main.c  tusb_config.h  usb_descriptors.c  usb_descriptors.h  version.h
example/: 400kHz.sh  README.md  disable_kde_compositor.sh  run.sh  ssd1306.py
tools/: 99-pico.rules
